--- a/manifest.json
+++ b/manifest.json
@@ -8,6 +8,10 @@
     "default_popup": "popup.html",
     "default_title": "Click here!"
   },
+  "background": {
+    "scripts": ["eventPage.js"],
+    "persistent": false
+  },
   "permissions": [
     "https://ride.lyft.com/",
     "https://calendar.google.com/calendar",
