--- a/manifest.json
+++ b/manifest.json
@@ -5,16 +5,17 @@
   "version": "1.0",
   "browser_action": {
     "default_icon": "icons/icon.png",
-    "default_popup": "popup.html",
+    "default_popup": "background.html",
     "default_title": "Click here!"
   },
   "background": {
-    "scripts": ["eventPage.js"],
+    "scripts": ["src/eventPage.js"],
     "persistent": false
   },
   "permissions": [
     "https://ride.lyft.com/",
     "https://calendar.google.com/calendar",
-    "activeTab"
+    "activeTab",
+    "tabs"
   ]
 }
